velocity/velocity-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: velocity-service
  namespace: minecraft-servers
spec:
  type: NodePort
  selector:
    app: velocity
  ports:
  - name: minecraft
    protocol: TCP
    port: 25577
    targetPort: 25577
    nodePort: 30577
